@@ -1,16 +1,19 @@
 package com.miostore.product.mapper;
 
+
+
 import com.miostore.offer.entity.Offer;
 import com.miostore.product.dto.*;
 import com.miostore.product.entity.*;
-import java.util.List;
+
+import java.util.*;
 import java.util.stream.Collectors;
-import java.util.Optional;
 
 public class ProductMapper {
 
     public static OfferDTO toOfferDTO(Offer offer) {
         if (offer == null) return null;
+
         return OfferDTO.builder()
                 .id(offer.getId())
                 .title(offer.getTitle())
@@ -25,6 +28,7 @@ public class ProductMapper {
 
     public static VariantDTO toVariantDTO(ProductVariant variant) {
         if (variant == null) return null;
+
         return VariantDTO.builder()
                 .sku(variant.getSku())
                 .unitLabel(variant.getUnitLabel())
@@ -33,36 +37,46 @@ public class ProductMapper {
                 .quantity(variant.getQuantity())
                 .color(variant.getColor())
                 .variantThumbImageUrl(variant.getThumbImageUrl())
-                .variantImageUrl(variant.getImageUrl())
+                .variantImageUrl(
+                        Optional.ofNullable(variant.getImageUrl()).orElse(List.of())
+                )
                 .build();
     }
 
     public static ProductDTO toDTO(Product product) {
         if (product == null) return null;
 
-        // Map offers
-        List<OfferDTO> offerDTOs = Optional.ofNullable(product.getOffers())
+        // Map offers safely
+        Set<OfferDTO> offerDTOs = Optional.ofNullable(product.getOffers())
+                .orElse(Collections.emptySet())
                 .stream()
-                .flatMap(List::stream)
                 .map(ProductMapper::toOfferDTO)
-                .collect(Collectors.toList());
+                .collect(Collectors.toSet());
 
-        // Map variants
-        List<VariantDTO> variantDTOs = Optional.ofNullable(product.getVariants())
-                .stream()
-                .flatMap(List::stream)
+        // Map variants safely
+        Set<ProductVariant> variants = Optional.ofNullable(product.getVariants())
+                .orElseGet(HashSet::new);
+
+        Set<VariantDTO> variantDTOs = variants.stream()
                 .map(ProductMapper::toVariantDTO)
-                .collect(Collectors.toList());
+                .collect(Collectors.toCollection(HashSet::new));
+
+
+        // Map categories (names only)
+        Set<Category> categories = Optional.ofNullable(product.getCategories())
+                .orElseGet(HashSet::new);
+
+        Set<String> categoryNames = categories.stream()
+                .map(Category::getName)
+                .collect(Collectors.toCollection(HashSet::new));
 
         return ProductDTO.builder()
-                .id(product.getId().toString())
-                .name(product.getName())
+                .id(String.valueOf(product.getId()))
                 .description(product.getDescription())
                 .currency(product.getCurrency())
                 .sku(product.getSku())
                 .brand(product.getBrand())
-                .category(product.getCategories().stream().map(cat->cat.getName()).collect(Collectors.toList()))
-                .availability(product.getAvailability())
+                .category(categoryNames)
                 .rating(product.getRating())
                 .variants(variantDTOs)
                 .offers(offerDTOs)
@@ -70,7 +84,8 @@ public class ProductMapper {
     }
 
     public static List<ProductDTO> toDTOList(List<Product> products) {
-        return Optional.ofNullable(products).orElse(List.of())
+        return Optional.ofNullable(products)
+                .orElse(Collections.emptyList())
                 .stream()
                 .map(ProductMapper::toDTO)
                 .collect(Collectors.toList());
